# RAG2Prod

./: .cursorrules  .env.template  .gitignore  README.md  current_task.md  demo_logger.py  docker-compose.yml  pyproject.toml  start_db.sh
.rules/: api_design.md  chunking_standards.md  current_task.md  database_rules.md  deployment_rules.md  observability_standards.md  prompt_guidelines.md  python_standards.md  security_standards.md  testing_policies.md
.storage/: doc_api_test_100_test_api_doc.txt  doc_api_test_4a5b277d_test_api_doc.txt  test_doc_debug_test_api.py
docs/: observability_critical_review.md  production_architecture_spec.md  tech_debt.md  validation_and_serialization.md
docs/reports/: observability_critical_review.md
docs/research/: chunking_methods.md  pydantic_validation.md  qa_review_remediations.md
src/: main.py
src/core/: chunker.py  config.py  context_builder.py  database.py  embeddings.py  generator.py  ingestion.py  logger.py  models.py  object_storage.py  parsers.py  prompts.py  query_understanding.py  retriever.py  schemas.py  storage_service.py  validation.py
src/templates/: dashboard.html
src/tools/: ocr_tool.py
tests/: conftest.py  locustfile.py  test_api.py  test_chaos.py  test_chunker.py  test_context_builder.py  test_embeddings.py  test_generator.py  test_hybrid_retriever.py  test_integrity.py  test_layout_parser.py  test_ocr_tool.py  test_parsers.py  test_query_understanding.py  test_retriever.py  test_sanity.py  test_security.py  test_storage.py  test_storage_service.py  test_validation.py
