[project]
name = "rag2prod"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "pydantic>=2.0.0",
    "python-dotenv",
    "pypdf>=6.13.2",
    "tiktoken>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false
