[project]
name = "rag2prod"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "pydantic>=2.0.0",
    "python-dotenv",
    "pypdf>=6.13.2",
    "tiktoken>=0.13.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "greenlet>=3.0.0",
    "rich>=13.0.0",
    "structlog>=24.0.0",
    "python-multipart>=0.0.32",
    "docling>=2.114.0",
    "rank-bm25>=0.2.2",
    "prometheus-client>=0.25.0",
    "python-json-logger>=4.1.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "aiofiles>=25.1.0",
    "tenacity>=8.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "session"

[tool.uv]
package = false
